yle-dl - download videos from Yle servers
Copyright 2009-2020 Antti Ajanki
Distributed under the GPL v3


<unreleased>

- Fixed failing audio episodes caused by a page not being recognizing correctly

Version 20200628

- Fixed metadata and episode numbers in the output filenames
- PHP and rtmpdump are not needed anymore
- Removed unused options --hardsubs and --audiolang

Version 20200618

- Fixed downloading from Areena after the recent API changes
- Fixed Elävä Arkisto support

Version 20200419

- Support for new Areena audio series pages
- Live TV at 720p resolution by default (use --resolution for lower quality)
- Fixed --maxbitrate best when used together with --resolution

Version 20200222

- Try to avoid generating too long filenames
- Fixed a crash on Sámi language titles
- Better error message if a stream has expired
- Show an error when source has multiple clips but only one output given

Version 20191231

- Don't download a copy if a file already exists
- New option --no-overwite avoids downloading if a file (even partial)
  already exists
- The default was changed to resume a partially downloaded file (on
  supported streams). Use --no-resume download the whole stream again
- Handle various corner cases better in the title extraction
- Include an unique ID in the output file name with --output-template '${program_id}'
- More options for controlling the output verbosity: -qq, -q, -V, -VV
- File name and metadata in Swedish (if available): --metadatalang swe
- Use the Swedish title by default on a Svenska Arenan or Arkivet URL

Version 20191022

- Make --destdir and -o work together
- Avoid re-downloading a file when --resume is enabled
- Embed the program description in the output file (only Matroska files)
- Include the tests in the source tarball

Version 20190614 - Ten years anniversary edition

- Improved compability with older ffmpeg versions
- Save subtitles in a format supported by mplayer

Version 20190502
